# Portfolio_Balancer

./: .coverage  .dockerignore  .gitignore  API_DOCUMENTATION.md  API_QUICKSTART.md  CLAUDE.md  Dockerfile  README.md  api.py  balancer.py  browser.ipynb  classes.puml  db.erd.json  docker-compose.yml  file_loader.py  main.py  pyproject.toml  requirements.txt  run_api.sh  stock.py  stock_portfolio_app.drawio  table.py  test.json
.github/workflows/: tests.yaml  tests.yml
api/: api.py
data/: portfolio.db
dbt/stock_portfolio_dbt/: README.md  dbt_project.yml
external_data/: Transactions-CTO.csv
monitoring/: prometheus.yml
portfolio_balancer/: api.py  balancer.py  exception.py  file_loader.py  file_loader_numbers.py  stock.py
portfolio_data/: dataset_loader.py  portfolio_loader.py
portfolio_database/: dataset_loader.py  portfolio_loader.py  utilities.py
scripts/: import_former_holdings.py
stock_portfolio_app/: config.py  main.py
stock_portfolio_app/api/: README.md  __init__.py  app.py  client_example.py  middleware.py  schemas.py
stock_portfolio_app/benchmark/: locustfile.py  run_benchmark.py
stock_portfolio_app/data/: portfolio.db
stock_portfolio_app/models/: Base.py  Position.py  Stock.py  Transaction.py
stock_portfolio_app/scripts/: import_crypto_csv.py  import_cto_csv.py
stock_portfolio_app/services/: data_processing.py  database_service.py  portfolio_service.py  stock_api.py
stock_portfolio_app/tests/: conftest.py  test_crypto_api.py  test_deposits_api.py  (+11 more)
stock_portofolio_app/: main.py
tests/: file_loader_tests.py  test_file_loader.py
(+85 files in other folders)
