[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "stock-portfolio-app"
version = "1.0.0"
description = "Stock Portfolio Balancer"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["."]
include = ["stock_portfolio_app*"]

[tool.pytest.ini_options]
testpaths = ["stock_portfolio_app/tests"]
pythonpath = ["stock_portfolio_app"]
